2005-07-09  Veerapuram Varadhan <vvaradhan@novell.com>
	
	* gui/component/addressbook-component.c: (impl_createControls):
	* gui/component/addressbook-view.[c,h]: (addressbook_view_edit_contact):
	(impl_handleURI): Handle contacts:// uris.
	
2005-07-08  Sushma Rai  <rsushma@novell.com>

	* gui/widgets/eab-gui-util.c (eab_load_error_dialog): Including the
	file path in the error string. Fixes #309624

2005-07-07  Frederic Crozat  <fcrozat@mandriva.com>

	* gui/component/addressbook-component.c: (ensure_sources):
	* gui/component/addressbook-migrate.c: (create_groups):
	Enable autocompletion on personal addressbook when creating it
	(Mandriva bug #16427).

2005-07-06  Vivek Jain <jvivek@novell.com>
	
	* gui/component/addressbook-view.c: (popup_event_callback)
	* gui/widget/e-addressbook-view.c :(do_popup_menu)
	added comments about the hookpoints

2005-07-06  Srinivasa Ragavan <sragavan@novell.com>
	* gui/widgets/eab-gui-util.c: (contact_added_cb): Fixed for bug 
	309245.
	* /gui/widgets/e-addressbook-view.c:  Fixes the bug 206774, 242154.
	* gui/widgets/eab-popup.c: (eab_popup_target_new_select)  Fixes the
	bug 206774, 242154.
	* gui/widgets/eab-popup.h: Fixes the bug 206774, 242154.

2005-07-06  Not Zed  <NotZed@Ximian.com>

	* Makefile.am (SUBDIRS): build importers before the gui code.

	* gui/component/Makefile.am (libevolution_addressbook_la_LIBADD):
	link to importer plugin builtins.

	* importers/Makefile.am: just build a shared library with all the
	importers in it, we dont install a plugin, it is just linked to
	the main app for simplicity.

	* importers/GNOME_Evolution_Addressbook_VCard_Importer.server.in.in: 
	* importers/GNOME_Evolution_Addressbook_LDIF_Importer.server.in.in:
	removed.

	* importers/evolution-vcard-importer.c: ported
	to eimport, simplified some logic (why test extensions and then test
	file content anyway), fixed some memory leaks, etc.

	* importers/evolution-ldif-importer.c (ldif_import): remove